# maybe-result-cpp

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE-MIT  README.md  _r_e_a_d_m_e_8md_source.html  annotated.html  classes.html  classmaybe_1_1bad__result__access-members.html  classmaybe_1_1bad__result__access.html  classmaybe_1_1result-members.html  classmaybe_1_1result_3_01void_00_01_e_01_4-members.html  classmaybe_1_1result_3_01void_00_01_e_01_4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_e1317400fd2e78b9c5e6f030bed950ae.html  doxygen.css  example_8cpp_source.html  export_doc.sh  files.html  functions.html  functions_func.html  hierarchy.html  index.html  result_8fwd_8hpp_source.html  result_8hpp_source.html  result_8inline_8hpp_source.html  singletonmaybe_1_1result.html  tabs.css
dev/: docker-run-tests.sh  run-tests.sh  travis-run-tests.sh
examples/: example.cpp
search/: all_2.js  all_5.js  all_7.js  classes_0.js  functions_0.js  functions_2.js  functions_3.js  functions_5.js  search.css  search.js
src/: CMakeLists.txt
src/maybe/: platforms.hpp  result.fwd.hpp  result.hpp  result.inline.hpp
tests/: CMakeLists.txt  example_test.cpp  main.cpp  maybe_result_tests.cpp  result_and_then_tests.cpp  result_chaining_tests.cpp  result_into_err_tests.cpp  result_map_err_tests.cpp  result_map_tests.cpp  result_tests.cpp
